--- a/.github/workflows/helm-validate.yaml
+++ b/.github/workflows/helm-validate.yaml
@@ -151,7 +151,7 @@ jobs:
       - name: Make deployment scripts executable
         run: |
           chmod +x ./install_dependencies.sh
-          chmod +x ./generate_certs.sh
+          chmod +x ./generate-certs.sh
 
       - name: Install dependencies
         run: ./install_dependencies.sh
